--- a/API/package.json
+++ b/API/package.json
@@ -13,7 +13,8 @@
     "http-errors": "~1.6.3",
     "mongod": "^2.0.0",
     "mongoose": "^5.10.11",
-    "morgan": "~1.9.1"
+    "morgan": "~1.9.1",
+    "mysql": "^2.18.1"
   },
   "devDependencies": {
     "nodemon": "^2.0.6"
